<resources>
    <string name="app_name">MAD Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ertrtt">helloo</string>
    <string name="btnResetPW">Reset Password</string>
    <string name="edt_mobileNo">0763302134</string>
    <string name="tv_mobileNo">Mobile Number</string>
    <string name="edt_email">janith@gmail.com</string>
    <string name="tv_email">Email</string>
    <string name="btneditprofile">Save Changes</string>
    <string name="btn_donationhistory">My Donation History</string>
    <string name="title_activity_login">Leanback loginActivity</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="postTxt1"><![CDATA[The "Asara Sarana" charity donates Food and Clothes to people who are struggling due to crisis in Sri Lanka]]></string>
    <string name="postTxt2"><![CDATA[The Welfare Society of Ampara provide educational requirements for school children]]></string>
    <string name="btn_view1">VIEW</string>
    <string name="btn_view2">VIEW</string>
    <string name="btn_view3">VIEW</string>
    <string name="selected_charity">ARUNELLA</string>
    <string name="text_select_charity">Selected Charity</string>
    <string name="text_selected_charity">Selected Charity</string>
    <string name="text_charity_name">ARUNELLA</string>
    <string name="text_discrip">We are conducting this Arunella program for 6 consecutive years on October 1st, and on that day we will provide the necessary books and equipment to the students studying in the poor areas.</string>
    <string name="btn_back">BACK</string>
    <string name="btn_donate">DONATION</string>
    <string name="text_admin">Charity Administration</string>
    <string name="text_edu_manage">Educational Charity Management</string>
    <string name="search">Serch by Charity Name</string>
    <string name="btn_add1">Add New Charity to the System</string>
    <string name="btn_charity1_update">UPDATE</string>
    <string name="btn_charity1_delete">DELETE</string>
    <string name="btn_charity2_update">UPDATE</string>
    <string name="btn_charity2_delete">DELETE</string>
    <string name="btn_back2">BACK</string>
    <string name="txt_new_charity">Add New Charity</string>
    <string name="btn_new_submit">SUBMIT</string>
    <string name="btn_back3">BACK</string>
    <string name="btn_back4">BACK</string>
    <string name="btn_update_submit">SUBMIT</string>

</resources>