<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#C2185B"
    tools:context=".edu_charity_admin">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="415dp"
        android:layout_height="44dp"
        android:background="#303F9F"
        android:backgroundTint="#303F9F"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/text_edu_manage"
        android:textColor="#F6F2F2"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="374dp"
        android:layout_height="47dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="57dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="324dp"
        android:layout_height="54dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="#0288D1"
        android:text="@string/btn_add1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchView" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="333dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:gravity="center_horizontal|left|center_vertical"
        android:text="ARUNELLA - Children's Foundation - Kandy  District"
        android:textColor="#101010"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button16"
        android:layout_width="152dp"
        android:layout_height="47dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#1976D2"
        android:text="@string/btn_charity1_update"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        tools:layout_editor_absoluteY="267dp" />

    <Button
        android:id="@+id/button17"
        android:layout_width="163dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#C1072C"
        android:text="@string/btn_charity1_delete"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="209dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="328dp"
        android:layout_height="50dp"
        android:layout_marginTop="76dp"
        android:gravity="center_horizontal|left|center_vertical"
        android:text="For the Children's Future Foundation - colombo District"
        android:textColor="#0B0A0A"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        tools:layout_editor_absoluteX="43dp" />

    <Button
        android:id="@+id/button18"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#1976D2"
        android:text="@string/btn_charity2_update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button19"
        android:layout_width="148dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="44dp"
        android:backgroundTint="#C0072C"
        android:text="@string/btn_charity2_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <Button
        android:id="@+id/button20"
        android:layout_width="268dp"
        android:layout_height="43dp"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#C2185B"
        android:text="@string/btn_back2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>