<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".select_charity">


    <TextView
        android:id="@+id/textView6"
        android:layout_width="413dp"
        android:layout_height="64dp"
        android:layout_marginTop="4dp"
        android:background="#0A1551"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/text_selected_charity"
        android:textColor="#C5BFBF"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="320dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:background="#0097A7"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/text_charity_name"
        android:textColor="#131111"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="370dp"
        android:layout_height="125dp"
        android:layout_marginTop="32dp"
        android:background="#8BE4DA"
        android:text="@string/text_discrip"
        android:textColor="#191818"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="411dp"
        android:layout_height="135dp"
        android:src="@drawable/download"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button6"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:backgroundTint="#C2185B"
        android:text="@string/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="594dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="231dp"
        android:layout_height="55dp"
        android:backgroundTint="#388E3C"
        android:text="@string/btn_donate"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

</androidx.constraintlayout.widget.ConstraintLayout>